# MemoryGame

./: .gitignore  CMakeLists.txt
include/: common.h  game.h  game_logic.h  screens.h  user_interface.h  widgets.h
src/: game.cpp  game_logic.cpp  main.cpp  screens.cpp  user_interface.cpp  widgets.cpp
